gcc-8 (8.4.0-2) UNRELEASED; urgency=medium

  * For all runtime libraries, generate dependencies on libgcc-sN instead 
    on libgccN, when libgccN isn't built from this source package.

 -- Matthias Klose <doko@debian.org>  Sat, 07 Mar 2020 14:06:39 +0100

gcc-8 (8.4.0-1) unstable; urgency=medium

  * GCC 8.4.0 release.
    - Fix PR target/91276 (PPC), PR tree-optimization/93820,
      PR rtl-optimization/93908, PR tree-optimization/93767,
      PR tree-optimization/93434, PR middle-end/92768,
      PR tree-optimization/92420, PR middle-end/90313, PR c++/92003,
      PR target/93658 (PPC), PR target/93568 (PPC), PR target/93828 (x86),
      PR target/93656 (x86), PR c++/93905, PR c++/90998, PR c++/86521,
      PR c++/90546, PR c++/86521, PR c++/89831, PR c++/88380, PR c++/87685,
      PR c++/86747, PR c++/86429, PR c++/82643, PR c++/87327, PR c++/87748,
      PR c++/87480, PR c++/88394, PR c++/87770, PR c++/92745, PR c++/89917,
      PR c++/90951, PR c++/93140, PR c++/92852, PR fortran/93714,
      PR libstdc++/93205, PR libstdc++/92886, PR libstdc++/93325,
      PR libstdc++/93562, PR libstdc++/92376, PR libstdc++/78552,
      PR libstdc++/91947, PR libstdc++/81091, PR libstdc++/91947,
      PR other/93965, PR target/91276 (PPC).

 -- Matthias Klose <doko@debian.org>  Wed, 04 Mar 2020 11:14:02 +0100

gcc-8 (8.3.0-29) unstable; urgency=medium

  * Update to git 20200218 from the gcc-8 branch.
    - Fix PR tree-optimization/93381, PR tree-optimization/93439,
      PR middle-end/93054, PR debug/92763, PR tree-optimization/92704,
      PR middle-end/92674, PR target/93724 (x86), PR tree-optimization/93744,
      PR target/93704 (SPARC), PR target/93696 (x86), PR target/93673 (x86),
      PR target/93670 (x86), PR target/93637 (x86), PR target/65782 (x86),
      PR libgomp/93515, PR middle-end/93555, PR middle-end/93505,
      PR rtl-optimization/93402, PR target/91298 (x86), PR target/93333 (RISCV),