@@ -2155,16 +2155,7 @@ ifeq ($(with_hppa64),yes)
 
 	rm -rf $(d)/$(PF)/hppa64-linux-gnu/include
 	rm -rf $(d)/$(PF)/hppa64-linux-gnu/lib
-	set -e; \
-	  cd $(d)/$(PF)/$(libdir)/gcc/hppa64-linux-gnu/$(versiondir)/include-fixed; \
-	  for i in *; do \
-	    case "$$i" in \
-	      README|features.h|syslimits.h|limits.h) ;; \
-	      linux|$(TARGET_ALIAS)) ;; \
-	      $(subst $(DEB_TARGET_GNU_CPU),$(biarch_cpu),$(TARGET_ALIAS))) ;; \
-	      *) echo "remove include-fixed/$$i"; rm -rf $$i; \
-	    esac; \
-	  done
+	rm -rf $(d)/$(PF)/$(libdir)/gcc/hppa64-linux-gnu/$(versiondir)/include-fixed
 endif
 
 	: # Work around PR lto/41569
@@ -2193,16 +2184,7 @@ endif
 	else \
 	  rm -f $(d)/$(PF)/bin/$(TARGET_ALIAS)-gcc-8*; \
 	fi
-	set -e; \
-	  cd $(d)/$(gcc_lib_dir)/include-fixed; \
-	  for i in *; do \
-	    case "$$i" in \
-	      README|features.h|syslimits.h|limits.h) ;; \
-	      linux|$(TARGET_ALIAS)) ;; \
-	      $(subst $(DEB_TARGET_GNU_CPU),$(biarch_cpu),$(TARGET_ALIAS))) ;; \
-	      *) echo "remove include-fixed/$$i"; rm -rf $$i; \
-	    esac; \
-	  done
+	rm -rf $(d)/$(gcc_lib_dir)/include-fixed
 
 ifneq ($(configured_libdir),$(libdir))
 	for i in ada debug go pkgconfig '*.so' '*.so.*' '*.a' '*.la' '*.py' '*.spec'; do \
