@@ -1,7 +1,8 @@
 gcc-8 (8.4.0-2) UNRELEASED; urgency=medium
 
-  * For all runtime libraries, generate dependencies on libgcc-sN instead 
+  * For all runtime libraries, generate dependencies on libgcc-sN instead
     on libgccN, when libgccN isn't built from this source package.
+  * Stop shipping the include-fixed directory.
 
  -- Matthias Klose <doko@debian.org>  Sat, 07 Mar 2020 14:06:39 +0100
 
